fix(loading): fix loading autocenter not align (#985)

--- a/src/components/loading/style/index.less
+++ b/src/components/loading/style/index.less
@@ -188,10 +188,6 @@
   }
 
   &-ring {
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    margin-left: -14px;
     animation: container-rotate @container-rotate-timing linear infinite;
     &-line {
       position: absolute;
